--- a/package.json
+++ b/package.json
@@ -1,24 +1,15 @@
 {
-  "name": "Visual Learning Center",
+  "name": "StickPoser",
   "version": "0.0.1",
-  "description": "Stick Poser Website which will become the TFL Lessons website in time.",
+  "private": true,
   "scripts": {
     "start": "node app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@heroku.com:visual-learning-center.git"
-  },
-  "author": "Karl Tyson, Mark Earnest",
-  "license": "MIT",
   "dependencies": {
     "express": "3.4.7",
     "jade": "*",
     "mongodb": "*",
     "monk": "*",
     "nodemailer": "*"
-  }
-  "engines": {
-    "node": "0.10.x"
   }
 }
